--- a/package.json
+++ b/package.json
@@ -22,10 +22,12 @@
     "eslint": "^8.48.0",
     "eslint-config-next": "13.4.19",
     "next": "^13.4.19",
+    "next-swagger-doc": "^0.4.0",
     "postcss": "^8.4.29",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "resend": "^1.0.0",
+    "swagger-ui-react": "^5.7.2",
     "tailwindcss": "^3.3.3",
     "typescript": "5.2.2"
   },
@@ -34,6 +36,7 @@
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.4.3",
     "@types/jest": "^29.5.4",
+    "@types/swagger-ui-react": "^4.18.0",
     "daisyui": "^3.7.4",
     "encoding": "^0.1.13",
     "jest": "^29.6.4",
